# schoolmock-br

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET.md  DATASHEET.md  LICENSE  README.md  pyproject.toml  schoolmock_br.py
.github/workflows/: ci.yml  release.yml
paper/: paper.bib  paper.md
scripts/: gerar_dataset_oficial.py  gerar_figura_benchmark.py
src/schoolmock_br/: __init__.py  baseline.py  benchmark.py  cli.py  core.py  cpf.py  dataset.py  verifier.py
src/schoolmock_br/data/: __init__.py  ibge.py  series.py
tests/: test_conformidade.py  test_core.py  test_cpf.py  test_dataset.py  test_series.py  test_verifier.py
